--- a/client/src/pages/Products.css
+++ b/client/src/pages/Products.css
@@ -1,11 +1,20 @@
 .productBody {
     margin-top: 20px;
+  
   }
   .fixed-size {
     width: 350px; 
     height: 350px; 
   }
-  
+  .img-fluid{
+    
+    max-width: 100%;
+    height: 300px;
+    display: block;
+    margin-left: auto; 
+    margin-right: auto; 
+   
+  }
   .product-card-10 {
     border: 1px solid var(--bs-gray-300);
   }
