--- a/client/src/pages/about.css
+++ b/client/src/pages/about.css
@@ -5,6 +5,8 @@
     display: block;
     margin-left: auto; 
     margin-right: auto; 
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+
    
   }
 
